--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,24 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wuyoudao.java</groupId>
-    <artifactId>org.wuyoudao.java.lainer</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>lainer</artifactId>
+    <version>0.0.1</version>
     <name>lainer</name>
+    <packaging>jar</packaging>
     <description>lainer project</description>
+
+	<build>
+		<plugins>
+		    <plugin>
+		        <groupId>org.springframework.boot</groupId>
+		        <artifactId>spring-boot-maven-plugin</artifactId>
+		    </plugin>
+		</plugins>
+	</build>
+
+    <properties>
+        <spring.version>4.2.4.RELEASE</spring.version>
+    </properties>
 
     <dependencies>
         <!-- Apache Commons -->
@@ -41,20 +55,25 @@
         </dependency>
 
         <!-- Spring -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-web</artifactId>
+	        <version>1.3.1.RELEASE</version>
+	    </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>3.0.4.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>3.0.4.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>3.0.4.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
