add netty demo: discard, echo

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.11.Final</version>
+        </dependency>
+    
         <!-- Apache Commons -->
         <dependency>
             <groupId>org.apache.commons</groupId>
