--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>4.1.11.Final</version>
@@ -168,13 +173,14 @@
             <artifactId>jfreechart</artifactId>
             <version>1.0.12</version>
         </dependency>
+
         <dependency>
-            <groupId>itext</groupId>
+            <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
             <version>2.1.7</version>
         </dependency>
         <dependency>
-            <groupId>itext</groupId>
+            <groupId>com.lowagie</groupId>
             <artifactId>itext-rtf</artifactId>
             <version>2.1.7</version>
         </dependency>
